small reconfiguration and added tests