@@ -35,14 +35,18 @@ public class ProcessProvision extends AbstractMethodProcessor {
   
   private final static Logger LOGGER = Logger.getLogger(ProcessProvision.class.getName());
   
+  private final List<URN> urns;
   
-  public  Model provisionInstances(
-			List<URN> urns) throws UnsupportedEncodingException {
+  
+  public ProcessProvision(List<URN> urns) {
+    this.urns = urns;
+  }
+  
+  public  Model provisionInstances() throws UnsupportedEncodingException {
 
 		LOGGER.log(Level.INFO, "create provision model ");
 		Model requestModel = ModelFactory.createDefaultModel();
-		for (URN urn : urns) {
-
+		for (URN urn : this.urns) {
 
 			if (ISFA_AM.SLICE.equals(urn.getType())) {
                 Individual topology = Omn.Topology.createIndividual(IConfig.TOPOLOGY_NAMESPACE_VALUE+urn.getSubject());
@@ -50,7 +54,7 @@ public class ProcessProvision extends AbstractMethodProcessor {
 
 			}else{
 				if (ISFA_AM.Sliver.equals(urn.getType())) {
-					Individual resource = Omn.Resource.createIndividual(URLDecoder.decode(urn.getSubject(),"UTF-8"));
+					Individual resource = Omn.Resource.createIndividual(URLDecoder.decode(urn.getSubject(),ISFA_AM.UTF_8));
                     requestModel.add(resource.listProperties());
 				}
 			}
@@ -60,20 +64,19 @@ public class ProcessProvision extends AbstractMethodProcessor {
 		String serializedModel = MessageUtil.serializeModel(requestModel,
 				IMessageBus.SERIALIZATION_TURTLE);
 		LOGGER.log(Level.INFO, "send provision request ...");
-		Model provisionResponse = SFA_AM_MDBSender.getInstance()
-				.sendRDFRequest(serializedModel, IMessageBus.TYPE_CONFIGURE,
+		Model provisionResponse = getSender().sendRDFRequest(serializedModel, IMessageBus.TYPE_CONFIGURE,
 						IMessageBus.TARGET_ORCHESTRATOR);
 		LOGGER.log(Level.INFO,
 				"provision reply is received.");
 		return provisionResponse;
 	}
   
-  public  void addProvisionValue(final HashMap<String, Object> result, Model provisionResponse){
+  public void addProvisionValue(final HashMap<String, Object> result, Model provisionResponse){
 	  
 	  final Map<String, Object> value = new HashMap<>();
 
 	  try {
-		value.put(IGeni.GENI_RSPEC, ManifestConverter.getRSpec(provisionResponse, "localhost"));
+		value.put(IGeni.GENI_RSPEC, ManifestConverter.getRSpec(provisionResponse, ISFA_AM.LOCALHOST));
 	} catch (JAXBException | InvalidModelException e) {
 		// TODO Auto-generated catch block
 		LOGGER.log(Level.SEVERE,e.toString());
@@ -81,5 +84,6 @@ public class ProcessProvision extends AbstractMethodProcessor {
       this.addSliverInformation(value,provisionResponse);
 	    result.put(ISFA_AM.VALUE, value);
   }
+  
   
 }
